# anchor-zeta-final

./: README.md
frontend/: WALLET_SETUP.md  package.json
frontend/app/: layout.tsx  page.tsx  solanaProvider.tsx  wagmiProvider.tsx
frontend/components/: Headers.tsx  SolanaWalletButton.tsx  WagmiWalletButton.tsx
frontend/components/ui/: Button.tsx  tooltip.tsx
frontend/lib/: init.ts
frontend/lib/solana/: index.ts
frontend/lib/zeta/: abi.ts  address.ts  index.ts  viem-client.ts
solana/: Anchor.toml  Cargo.toml  package.json
solana/programs/main/: Cargo.toml
solana/programs/main/src/: lib.rs  universal_nft_core.rs
zeta/: foundry.toml  package.json
zeta/broadcast/Deploy.s.sol/7001/: run-1756305551.json  run-1756305685.json  run-1756305775.json  run-1756305947.json  run-1756320060.json
zeta/lib/standard-contracts/: package-lock.json  package.json
zeta/script/: Deploy.s.sol  DeployProxy.s.sol
zeta/shared/: UniversalNFTEvents.sol
zeta/src/: UniversalNFT.sol  UniversalNFTCore.sol
zeta/test/: Counter.t.sol
