[package]
name = "main"
version = "0.1.0"
description = "Universal NFT program with cross-chain capabilities"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "main"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
dev = ["gateway/dev"]

[dependencies]
anchor-lang = { version = "=0.31.1" }
anchor-spl = { version = "=0.31.1", features = ["metadata"] }
mpl-token-metadata = "5.1.1"
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
gateway = { path = "../gateway", features = ["no-entrypoint", "cpi"] }
